3-july-2024/velflix-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velflix
  namespace: velflix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: velflix
  template:
    metadata:
      labels:
        app: velflix
    spec:
      containers:
      - name: velflix
        image: chandanteekinavar/velflix:1.0
        ports:
        - containerPort: 8000
