3-july-2024/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: velflix
  labels:
    app: mysql-db
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mysql-db
