3-july-2024/velflix-service.yml
apiVersion: v1
kind: Service
metadata:
  name: velflix
  namespace: velflix
spec:
  # type: NodePort
  selector:
    app: velflix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      #nodePort: 30080
