3-july-2024/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velflix-ingress
  namespace: velflix
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: velflix.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velflix
                port:
                  number: 80
